comments, minor changes

--- a/Self Repairing Code.ipynb
+++ b/Self Repairing Code.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cf0dfa08683c20b9f634314ab4457661ae143674696c43d0b0ea75527298cded"
+  "signature": "sha256:1c2a91fc22cd217a4a6504b9e9a3f1e5bbff19674bc18b6cc9e7ee0abe61e6b2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,39 +12,59 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "\"\"\"\n",
+      "    Some masks and the number of 16 bit words\n",
+      "    in our code, in this case, its 8. After\n",
+      "    we \"sythesize\" the other \"strand of RNA\n",
+      "    code\", we will have 8, 32 bit words, which\n",
+      "    as a whole is analogous to DNA.\n",
+      "\"\"\"\n",
       "L_MASK = int('0x0000ffff', 16)\n",
       "H_MASK = int('0xffff0000', 16)\n",
-      "ERBITS = int('0xfffff00f', 16)\n",
-      "NLINES = 8"
+      "ERBITS = int('0xffff0000', 16)\n",
+      "NLINES = 8\n",
+      "NERROR = NLINES - 1"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 75
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "\"\"\"\n",
+      "    Basically some aliases to avoid ( (((  ))) )\n",
+      "\"\"\"\n",
       "fixRight = lambda x: x >> 16\n",
       "fixLeft = lambda x: x << 16"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 76
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "\"\"\"\n",
+      "    Set up some commands for generating (pseudo) random\n",
+      "    16 bit code words and the complementary \"strand of\n",
+      "    RNA code\".\n",
+      "    \n",
+      "    riskyProc() is some simple case of a set of procedures,\n",
+      "    operations, or coditions, (such as transmittion, storage,\n",
+      "    recovery)\n",
+      "\"\"\"\n",
       "from random import randint\n",
       "KEY = randint(1, 2**16)\n",
-      "randCode = lambda : randint(0,2**16)\n",
-      "genCodePair = lambda code: (fixLeft(code ^ KEY) & H_MASK) + ( code & L_MASK )\n",
+      "randCode = lambda : randint(0,2**16) # Generate a random code within 16 bit range\n",
+      "genCodePair = lambda code: (fixLeft(code ^ KEY) & H_MASK) + ( code & L_MASK ) # Generate the Complement (\"hRNA + lRNA = DNA\")\n",
       "unZip = lambda prog: [(fixRight(x & H_MASK), x & L_MASK) for x in prog]\n",
-      "printBin32 = lambda x: bin(x)[2:].zfill(32)\n",
-      "printBin16 = lambda x: bin(x)[2:].zfill(16)\n",
+      "printBin32 = lambda x: bin(x)[2:].zfill(32) # Convert x to a binary string\n",
+      "printBin16 = lambda x: bin(x)[2:].zfill(16) # dido\n",
       "def riskyProc(prog):\n",
       "    rN = randint(0,len(prog)-1)\n",
       "    prog[rN] = prog[rN] & ERBITS"
@@ -52,13 +72,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 77
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def dispCode(tup_list, whole_code_list):\n",
+      "\"\"\"\n",
+      "    dispCode() takes a code list (whole_code_list) and displays it\n",
+      "    after checking the code for errors, if there are errors, a notice\n",
+      "    is displayed too.\n",
+      "\"\"\"\n",
+      "def dispCode(whole_code_list):\n",
+      "    tup_list = unZip(whole_code_list)\n",
       "    x = [(printBin32(whole_code_list[x]) ,(printBin16(tup_list[x][0]), printBin16(tup_list[x][1]) ) ) for x in range(len(tup_list))]\n",
       "    for l in x:\n",
       "        ls_int = int('0b' + l[1][0],2)\n",
@@ -66,15 +92,16 @@
       "        if KEY ^ ls_int == rs_int:\n",
       "            print l\n",
       "        else:\n",
-      "            print l, \"<----- ERROR\", (ls_int, rs_int, KEY ^ ls_int)\n",
+      "            print l, \"<----- ERROR\", (ls_int, rs_int, KEY ^ ls_int), \"(a, b, a ^ b)\"\n",
       "    print \"\\n\"\n",
-      "Prog = [genCodePair(randCode()) for x in range(NLINES)]\n",
-      "backUp = list(Prog)\n",
+      "Prog = [genCodePair(randCode()) for x in range(NLINES)] # Generate a program (Prog) in this case.\n",
+      "backUp = [int(i) for i in Prog] # Make back up\n",
       "print \"Good code:\"\n",
-      "dispCode(unZip(Prog), Prog)\n",
-      "riskyProc(Prog)\n",
+      "dispCode(Prog)\n",
+      "for i in range(NERROR):\n",
+      "    riskyProc(Prog)\n",
       "print \"Bad code:\"\n",
-      "dispCode(unZip(Prog), Prog)"
+      "dispCode(Prog)"
      ],
      "language": "python",
      "metadata": {},
@@ -84,31 +111,31 @@
        "stream": "stdout",
        "text": [
         "Good code:\n",
-        "('11100001111111111110001001110100', ('1110000111111111', '1110001001110100'))\n",
-        "('00010001011000010001001011101010', ('0001000101100001', '0001001011101010'))\n",
-        "('10011101110100111001111001011000', ('1001110111010011', '1001111001011000'))\n",
-        "('10000010110100001000000101011011', ('1000001011010000', '1000000101011011'))\n",
-        "('01101101001000010110111010101010', ('0110110100100001', '0110111010101010'))\n",
-        "('00101011011000000010100011101011', ('0010101101100000', '0010100011101011'))\n",
-        "('00000111110111000000010001010111', ('0000011111011100', '0000010001010111'))\n",
-        "('00010011011110100001000011110001', ('0001001101111010', '0001000011110001'))\n",
+        "('00001001000100110101010000101110', ('0000100100010011', '0101010000101110'))\n",
+        "('00000110010111100101101101100011', ('0000011001011110', '0101101101100011'))\n",
+        "('10101110000111111111001100100010', ('1010111000011111', '1111001100100010'))\n",
+        "('11010010010011111000111101110010', ('1101001001001111', '1000111101110010'))\n",
+        "('10010110110110101100101111100111', ('1001011011011010', '1100101111100111'))\n",
+        "('10100011000011001111111000110001', ('1010001100001100', '1111111000110001'))\n",
+        "('00111000001110000110010100000101', ('0011100000111000', '0110010100000101'))\n",
+        "('01111010011001010010011101011000', ('0111101001100101', '0010011101011000'))\n",
         "\n",
         "\n",
         "Bad code:\n",
-        "('11100001111111111110000000000100', ('1110000111111111', '1110000000000100')) <----- ERROR (57855, 57348, 57972)\n",
-        "('00010001011000010001001011101010', ('0001000101100001', '0001001011101010'))\n",
-        "('10011101110100111001111001011000', ('1001110111010011', '1001111001011000'))\n",
-        "('10000010110100001000000101011011', ('1000001011010000', '1000000101011011'))\n",
-        "('01101101001000010110111010101010', ('0110110100100001', '0110111010101010'))\n",
-        "('00101011011000000010100011101011', ('0010101101100000', '0010100011101011'))\n",
-        "('00000111110111000000010001010111', ('0000011111011100', '0000010001010111'))\n",
-        "('00010011011110100001000011110001', ('0001001101111010', '0001000011110001'))\n",
+        "('00001001000100110000000000000000', ('0000100100010011', '0000000000000000')) <----- ERROR (2323, 0, 21550) (a, b, a ^ b)\n",
+        "('00000110010111100000000000000000', ('0000011001011110', '0000000000000000')) <----- ERROR (1630, 0, 23395) (a, b, a ^ b)\n",
+        "('10101110000111110000000000000000', ('1010111000011111', '0000000000000000')) <----- ERROR (44575, 0, 62242) (a, b, a ^ b)\n",
+        "('11010010010011110000000000000000', ('1101001001001111', '0000000000000000')) <----- ERROR (53839, 0, 36722) (a, b, a ^ b)\n",
+        "('10010110110110100000000000000000', ('1001011011011010', '0000000000000000')) <----- ERROR (38618, 0, 52199) (a, b, a ^ b)\n",
+        "('10100011000011001111111000110001', ('1010001100001100', '1111111000110001'))\n",
+        "('00111000001110000000000000000000', ('0011100000111000', '0000000000000000')) <----- ERROR (14392, 0, 25861) (a, b, a ^ b)\n",
+        "('01111010011001010010011101011000', ('0111101001100101', '0010011101011000'))\n",
         "\n",
         "\n"
        ]
       }
      ],
-     "prompt_number": 78
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -118,18 +145,42 @@
       "    Prog = []\n",
       "    for i in range(len(tup_list)):\n",
       "        if key ^ tup_list[i][0] != tup_list[i][1]:\n",
-      "            ## Need to determine if error is on left or right (higher or lower signifcant bits)\n",
-      "            ## a1 ^ b1 = x ; a2 ^ b2 = x; a1 ^ b1 = a2 ^ b2\n",
-      "            ## For now, I know the error is on the right....\n",
-      "            tup_list[i] = (tup_list[i][0]  , tup_list[i][0] ^ key)\n",
+      "            \"\"\"\n",
+      "            Need to determine if error is on left or right (higher or lower signifcant bits)\n",
+      "            # Some algebra\n",
+      "            [1] a1 ^ b1 = x\n",
+      "            [2] a2 ^ b2 = x\n",
+      "            [3] a1 ^ x = b1\n",
+      "            [4] b1 ^ x = a1\n",
+      "            [5] a1 ^ b1 = a2 ^ b2\n",
+      "            [6] a1 ^ (a2 ^ b2) = b1 \"[2], [3]\"\n",
+      "            [7] b1 ^ (a2 ^ b2) = a1 \"[2], [4]\"\n",
+      "            For now, I know the error is on the right....\n",
+      "            \"\"\"\n",
+      "            a1, b1 = tup_list[i]\n",
+      "            a2, b2 = None, None\n",
+      "            if i > 0:\n",
+      "                a2, b2 = tup_list[i-1]\n",
+      "            elif len(tup_list) > 1:\n",
+      "                for j in range(len(tup_list)-1):\n",
+      "                    if j == i:\n",
+      "                        continue\n",
+      "                    elif key ^ tup_list[j][0] == tup_list[j][1]:\n",
+      "                        a2, b2 = tup_list[j]\n",
+      "                        break\n",
+      "                else:\n",
+      "                    raise Exception()\n",
+      "                \n",
+      "            tup_list[i] = ( a1, a1 ^ (a2 ^ b2) ) # [6] (a1, b1) = (a1 , a1 ^ (a2, b2))\n",
       "        Prog.append(fixLeft(tup_list[i][0]) + tup_list[i][1])\n",
       "    return Prog\n",
       "\n",
       "Prog = healCode(unZip(Prog), KEY)\n",
       "print \"Healed code\"\n",
-      "dispCode(unZip(Prog), Prog)\n",
+      "dispCode(Prog)\n",
       "print \"Original code\"\n",
-      "dispCode(unZip(backUp), backUp)"
+      "dispCode(backUp)\n",
+      "print \"Healed code == Original code :\", Prog == backUp"
      ],
      "language": "python",
      "metadata": {},
@@ -139,31 +190,40 @@
        "stream": "stdout",
        "text": [
         "Healed code\n",
-        "('11100001111111111110001001110100', ('1110000111111111', '1110001001110100'))\n",
-        "('00010001011000010001001011101010', ('0001000101100001', '0001001011101010'))\n",
-        "('10011101110100111001111001011000', ('1001110111010011', '1001111001011000'))\n",
-        "('10000010110100001000000101011011', ('1000001011010000', '1000000101011011'))\n",
-        "('01101101001000010110111010101010', ('0110110100100001', '0110111010101010'))\n",
-        "('00101011011000000010100011101011', ('0010101101100000', '0010100011101011'))\n",
-        "('00000111110111000000010001010111', ('0000011111011100', '0000010001010111'))\n",
-        "('00010011011110100001000011110001', ('0001001101111010', '0001000011110001'))\n",
+        "('00001001000100110101010000101110', ('0000100100010011', '0101010000101110'))\n",
+        "('00000110010111100101101101100011', ('0000011001011110', '0101101101100011'))\n",
+        "('10101110000111111111001100100010', ('1010111000011111', '1111001100100010'))\n",
+        "('11010010010011111000111101110010', ('1101001001001111', '1000111101110010'))\n",
+        "('10010110110110101100101111100111', ('1001011011011010', '1100101111100111'))\n",
+        "('10100011000011001111111000110001', ('1010001100001100', '1111111000110001'))\n",
+        "('00111000001110000110010100000101', ('0011100000111000', '0110010100000101'))\n",
+        "('01111010011001010010011101011000', ('0111101001100101', '0010011101011000'))\n",
         "\n",
         "\n",
         "Original code\n",
-        "('11100001111111111110001001110100', ('1110000111111111', '1110001001110100'))\n",
-        "('00010001011000010001001011101010', ('0001000101100001', '0001001011101010'))\n",
-        "('10011101110100111001111001011000', ('1001110111010011', '1001111001011000'))\n",
-        "('10000010110100001000000101011011', ('1000001011010000', '1000000101011011'))\n",
-        "('01101101001000010110111010101010', ('0110110100100001', '0110111010101010'))\n",
-        "('00101011011000000010100011101011', ('0010101101100000', '0010100011101011'))\n",
-        "('00000111110111000000010001010111', ('0000011111011100', '0000010001010111'))\n",
-        "('00010011011110100001000011110001', ('0001001101111010', '0001000011110001'))\n",
+        "('00001001000100110101010000101110', ('0000100100010011', '0101010000101110'))\n",
+        "('00000110010111100101101101100011', ('0000011001011110', '0101101101100011'))\n",
+        "('10101110000111111111001100100010', ('1010111000011111', '1111001100100010'))\n",
+        "('11010010010011111000111101110010', ('1101001001001111', '1000111101110010'))\n",
+        "('10010110110110101100101111100111', ('1001011011011010', '1100101111100111'))\n",
+        "('10100011000011001111111000110001', ('1010001100001100', '1111111000110001'))\n",
+        "('00111000001110000110010100000101', ('0011100000111000', '0110010100000101'))\n",
+        "('01111010011001010010011101011000', ('0111101001100101', '0010011101011000'))\n",
         "\n",
-        "\n"
+        "\n",
+        "Healed code == Original code : True\n"
        ]
       }
      ],
-     "prompt_number": 79
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
